src/test/ui/impl-trait/recursive-async-impl-trait-type.stderr
error[E0720]: opaque type expands to a recursive type
  --> $DIR/recursive-async-impl-trait-type.rs:7:40
   |
LL | async fn recursive_async_function() -> () {
   |                                        ^^ expands to self-referential type
   |
   = note: expanded type is `std::future::GenFuture<[static generator@$DIR/recursive-async-impl-trait-type.rs:7:43: 9:2 {impl std::future::Future, ()}]>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0720`.
